force-app/main/default/objects/TriggerFrameworkBypass__c/TriggerFrameworkBypass__c.object-meta.xml
<CustomObject>
    <label>TriggerFrameworkBypass</label>
    <nameField>
        <label>TriggerFrameworkBypass Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TriggerFrameworkBypass</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>