force-app/main/default/objects/TriggerFrameworkBypass__c/fields/BypassOn__c.field-meta.xml
<CustomField>
    <fullName>BypassOn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassOn</label>
    <type>Checkbox</type>
</CustomField>